# tree-programming-lang

./: CMakeLists.txt  README.md
include/: ast.h  errors.h  lexer.h  parser.h  run.h  token.h
src/: ast.c  lexer.c  parser.c  run.c  token.c  tree.c
test/include/: test_lexer.h  test_parser.h
test/src/: test_lexer.c  test_parser.c
tests/: test_lexer.c  test_lexer.h
